<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/viewpager_titlebar"
        android:gravity="center"
        android:text="@string/viewpager_title_textview"
        android:textColor="@color/viewpager_text_grey"
        android:textSize="16sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/viewpager_center" >
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/viewpager_titlebar"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/dating"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@string/gonggao"
            android:gravity="center"
            android:text="@string/wanju"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/yonghu"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RadioGroup>

</RelativeLayout>